@@ -248,6 +248,12 @@
 			<version>1.5.9</version>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+		    <groupId>org.postgresql</groupId>
+		    <artifactId>postgresql</artifactId>
+		    <version>42.2.5</version>
+		    <scope>provided</scope>
+		</dependency>		
 
 		<!-- just for test scope -->
 		<dependency>
