@@ -4,6 +4,7 @@ Every release contains many small fixes.
 
 === next
 * Form: read only wrapper
+* Backend: support for PostgreSql
 
 === 1.16.0.0
 * Extract use of JavaFx in ext project
